# quilt-trader

./: .gitignore  README.md  alembic.ini  pyproject.toml
.claude/commands/: render-spec.md
coordinator/: config.py  main.py
coordinator/api/: _ttl_cache.py  auth.py  dependencies.py  serialization.py  websocket.py
coordinator/database/: connection.py  models.py  session.py
coordinator/services/: account_backfill.py  account_lifecycle.py  archival.py  asset_catalog.py  backtest_config.py  backtest_engine.py  backtest_engine_v2.py  backtest_finalizer.py  backtest_metrics.py  backtest_metrics_qs.py  backtest_runner.py  backtest_scheduler.py  backtest_tearsheet.py  backtest_tick_context.py  backtest_writer.py  cached_snapshot.py  chain_builder.py  coverage_index.py  coverage_utils.py  data_service.py  discord_bot.py  download_job.py  download_manager.py  encryption.py  event_bus.py  github_service.py  goal_processor.py  lifecycle.py  live_feed_aggregator.py  live_feed_manager.py  live_finalizer.py  live_sample_sink.py  market_clock.py  metrics_aggregator.py  metrics_engine.py  options_math.py  options_mtm.py  package_manager.py  parallel_backtest_feeder.py  pdt_monitor.py  (+12 more)
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/concepts/: architecture.md  backtest-accuracy.md  cli-and-agentic-workflows.md  data-collection.md  distributed-execution.md  scrapers.md  writing-algorithms.md
docs/notes/: polygon-endpoints.md  wsl-tailscale-setup.md
docs/onboarding/: getting-started.md
docs/superpowers/: backlog.md
scripts/: diag_account_creds.py  install-worker.sh  migrate_canonical_symbols.py  push_algorithm_patches.py  render-spec.py  run_scraper_once.py  seed_data.py  setup-wsl-portproxy.ps1
sdk/: __init__.py  algorithm.py  context.py  manifest.py  models.py  scraper.py  signals.py  validation.py
sdk/cli/: backtest.py  client.py  config.py  data_provider.py  follow.py  main.py  output.py  process.py  resolve.py  run.py  validate.py
tests/coordinator/: conftest.py  test_account_equity_curve.py  test_account_sync.py  test_accounts_api.py  test_accounts_positions_close.py  test_accounts_positions_open.py  test_activity_api.py  test_alerts_api.py  test_api_auth.py  (+75 more)
worker/: adapter_factory.py  agent.py  alpaca_adapter.py  broker_adapter.py  caching_broker_adapter.py  coinbase_stream_adapter.py  config.py  context.py  data_client.py  live_instance_runtime.py  live_observer.py  main.py  package_cache.py  polygon_stream_adapter.py  rolling_data_buffer.py  runner.py  thetadata_stream_adapter.py  tick_loop.py  tradier_adapter.py
(+463 files in other folders)
