[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quilt-trader"
version = "0.1.0"
description = "Algorithmic trading framework for Raspberry Pi clusters"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
