[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quilt-trader"
version = "0.1.0"
description = "Algorithmic trading framework for Raspberry Pi clusters"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
quilt = "sdk.cli.main:quilt"

[project.optional-dependencies]
coordinator = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "cryptography>=43.0.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "PyGithub>=2.0.0",
    "pyarrow>=18.0.0",
    "APScheduler>=3.10.0",
    "discord.py>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
worker = [
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pydantic-settings>=2.6.0",
]
backtest = [
    "lumibot>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sdk", "coordinator", "worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "slow: marks tests that create real venvs or use the network (deselect with '-m not slow')",
]
